--- a/requirements.txt
+++ b/requirements.txt
@@ -25,10 +25,21 @@ mpmath==1.3.0
 murmurhash==1.0.10
 networkx==3.4.2
 numpy==2.0.2
+nvidia-cublas-cu12==12.4.5.8
+nvidia-cuda-cupti-cu12==12.4.127
+nvidia-cuda-nvrtc-cu12==12.4.127
+nvidia-cuda-runtime-cu12==12.4.127
+nvidia-cudnn-cu12==9.1.0.70
+nvidia-cufft-cu12==11.2.1.3
+nvidia-curand-cu12==10.3.5.147
+nvidia-cusolver-cu12==11.6.1.9
+nvidia-cusparse-cu12==12.3.1.170
+nvidia-nccl-cu12==2.21.5
+nvidia-nvjitlink-cu12==12.4.127
+nvidia-nvtx-cu12==12.4.127
 openpyxl==3.1.5
 packaging==24.1
 pandas==2.2.3
-pillow==11.0.0
 preshed==3.0.9
 pydantic==2.9.2
 pydantic_core==2.23.4
@@ -54,11 +65,10 @@ sympy==1.13.1
 thinc==8.3.2
 threadpoolctl==3.5.0
 tokenizers==0.20.1
-torch==2.5.0+cpu
-torchaudio==2.5.0+cpu
-torchvision==0.20.0+cpu
+torch==2.5.0
 tqdm==4.66.5
 transformers==4.46.0
+triton==3.1.0
 typer==0.12.5
 typing_extensions==4.12.2
 tzdata==2024.2
